--- a/uke-3/Tellemaskin.html
+++ b/uke-3/Tellemaskin.html
@@ -14,6 +14,7 @@
         div {
             flex: 1;
             color: yellow;
+            font-family: "Comic Sans MS";
         }
 
     </style>
@@ -25,27 +26,69 @@
     <script>
 
         var x = 0;
-        var tekst = `Dette er derfor en forkortelse av Nephis folks opptegnelser og
-også av lamanittenes — skrevet til lamanittene, som er en levning
-av Israels hus, og også til jøde og hedning — skrevet på befaling
-og også ved profetiens og åpenbaringens ånd — skrevet og forseglet
-og skjult ved Herren for at den ikke skulle ødelegges — for
-å komme frem ved Guds gave og kraft og bli oversatt — forseglet
-ved Moronis hånd og trygt skjult ved Herren, for, når tiden var
-inne, å komme frem gjennom hedningefolkene — oversatt ved
-Guds gave.
-Likeså en forkortelse tatt fra Ethers bok, som er en opptegnelse
-om Jareds folk som ble adspredt på den tid da Herren forvirret
-folkets språk da de bygget et tårn for å nå opp til himmelen — for
-å vise levningen av Israels hus de store ting Herren har gjort for
-deres fedre, og for at de kan kjenne Herrens pakter og vite at de
-ikke for alltid er forkastet — og også for å overbevise jøde og
-hedning om at Jesus er Kristus, den Evige Gud, som åpenbarer
-seg for alle nasjoner — og hvis det skulle finnes feil, er de av
-mennesker. Fordøm derfor ikke det som er av Gud, så dere kan
-finnes plettfrie for Kristi domstol.`;
+        var tekst = `
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        Hacking in PROGRES
+        `;
 
-
+        y = 1;
 
         function skriv() {
 
@@ -55,6 +98,12 @@ finnes plettfrie for Kristi domstol.`;
             document.body.appendChild(div);
             //Legger div element inn i body
 
+            document.body.style.gridTemplateColumns = `repeat(${y}, 1fr`;
+            y++;
+
+            if(y >50) {
+                y = 1
+            }
 
             div.style.transform = `scale( ${Math.random()*3} )`;
             //Øker x med 1
