--- a/uke-3/Tegning med variabler.html
+++ b/uke-3/Tegning med variabler.html
@@ -33,7 +33,7 @@
             ctx.fillRect(x+10, y+30, 30,5);
         }
 
-        setInterval(draw, 0.0001);
+        setInterval(draw, 0.000000000000001);
 
 
     </script>
