--- a/uke-3/Streker.html
+++ b/uke-3/Streker.html
@@ -6,6 +6,7 @@
     <style>
         body {
             margin: 0;
+            background-color: black;
         }
         #minCanvas {
             background-color: black;
@@ -41,9 +42,12 @@
                 ctx.stroke();
 
             ctx.closePath();
+
+            minCanvas.style.transform = `rotate(${Math.random()*360}deg scale(${x/100})`
+
         }
 
-        setInterval(tegnstrek, 0.01)
+        setInterval(tegnstrek, 0.000000001)
 
     </script>
 </main>
