--- a/uke-4/En prikk.html
+++ b/uke-4/En prikk.html
@@ -8,7 +8,7 @@
             margin: 0;
         }
         #canvas {
-            background-color: white;
+            background-color: black;
         }
 
     </style>
