--- a/uke-7/Ransoom former.html
+++ b/uke-7/Ransoom former.html
@@ -15,7 +15,7 @@
 
     minCanvas.height = hoyde;
     minCanvas.width = bredde;
-    var i = 30;
+    var i = 40;
     var b = 1;
     var m=1
 
@@ -55,8 +55,8 @@
         var n = i+(1/b)*i;
 
         ctx.beginPath(evt);
-        ctx.strokeStyle = `hsla(${m}, 100%, 50%, 0.9)`;
-        ctx.fillStyle = `hsla(${m+10}, 100%, 50%, 0.3)`;
+        ctx.strokeStyle = `hsla(${m}, 100%, 50%, 1)`;
+        ctx.fillStyle = `hsla(${m-90}, 100%, 50%, 0.15)`;
         ctx.moveTo(evt.clientX, evt.clientY+n);
 
             ctx.moveTo(evt.clientX+i, evt.clientY+i);
@@ -74,6 +74,8 @@
             ctx.lineTo(evt.clientX-i, evt.clientY+i);
 
         ctx.lineTo(evt.clientX, evt.clientY+n);
+
+            ctx.lineTo(evt.clientX+i, evt.clientY+i);
 
         ctx.stroke();
         ctx.fill();
