--- a/Bevegende logo/index.html
+++ b/Bevegende logo/index.html
@@ -17,36 +17,12 @@
             padding:10%;
 
         }
-        #bokstav1 {
-            transform: rotateX(0deg) rotateY(0deg) translate(0, 0);
-            position:absolute;
-            left: 0%;
-            display: flex;
-        }
-        #bokstav2 {
-
-            position:absolute;
-            left: 0%;
-            display: flex;
-        }
-        #bokstav3 {
-            transform: rotateX(0deg) rotateY(0deg) translate(0, 0);
-            position:absolute;
-            left: 0%;
-            display: flex;
-        }
-        #bokstav4 {
-            transform: rotateX(0deg) rotateY(0deg) translate(0, 0);
-            position:absolute;
-            left: 0%;
-            display: flex;
-        }
-        #bokstav5 {
-            transform: rotateX(0deg) rotateY(0deg) translate(0, 0);
-            position:absolute;
-            left: 0%;
-            display: flex;
-        }
+       #anus > div {
+           transform: rotateX(0deg) rotateY(0deg) translate(0, 0);
+           position:absolute;
+           left: 0%;
+           display: flex;
+       }
 
 
     </style>
