--- a/Bevegende logo/index.html
+++ b/Bevegende logo/index.html
@@ -79,25 +79,25 @@
             bokstav1.style.transform =
                 "rotateY(" + flipY + "deg)" +
                 "rotateX(" + flipX + "deg)" +
-                "translate(" + forsyvningX + "px," + forsyvningY + "px)";
+                "translate(" + forsyvningX / 3 + "px," + forsyvningY / 3 + "px)";
             bokstav3.style.transform =
                 "rotateY(" + flipY + "deg)" +
                 "rotateX(" + flipX + "deg)" +
-                "translate(" + forsyvningX + "px," + forsyvningY + "px)";
+                "translate(" + forsyvningX / 3 + "px," + forsyvningY / 3 + "px)";
             bokstav5.style.transform =
                 "rotateY(" + flipY + "deg)" +
                 "rotateX(" + flipX + "deg)" +
-                "translate(" + forsyvningX + "px," + forsyvningY + "px)";
+                "translate(" + forsyvningX / 3 + "px," + forsyvningY / 3 + "px)";
 
 
              bokstav4.style.transform =
                 "rotateY(" + flipY2 + "deg)" +
                 "rotateX(" + flipX2 + "deg)" +
-                "translate(" + forsyvningX2 + "px," + forsyvningY2 + "px)";
+                "translate(" + forsyvningX2 / 3 + "px," + forsyvningY2 / 3 + "px)";
             bokstav2.style.transform =
                 "rotateY(" + flipY2 + "deg)" +
                 "rotateX(" + flipX2 + "deg)" +
-                "translate(" + forsyvningX2 + "px," + forsyvningY2 + "px)";
+                "translate(" + forsyvningX2 / 3 + "px," + forsyvningY2 / 3 + "px)";
 
         }
 
